force-app/main/default/objects/Entity__c/Entity__c.object-meta.xml
<CustomObject>
    <description>List of entities found by Einstein NER</description>
    <label>Entity</label>
    <nameField>
        <displayFormat>NE{0000}</displayFormat>
        <label>Entity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>