force-app/main/default/objects/Entity__c/fields/Call_Log__c.field-meta.xml
<CustomField>
    <fullName>Call_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Linked Call Log</inlineHelpText>
    <label>Call Log</label>
    <referenceTo>Call_Log__c</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>