force-app/main/default/objects/Entity__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <inlineHelpText>Entity identified</inlineHelpText>
    <label>Entity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>