force-app/main/default/objects/Entity__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <inlineHelpText>Probability Score calculated by Einstein NER</inlineHelpText>
    <label>Probability</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>