force-app/main/default/objects/Entity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Entity Type Identified</inlineHelpText>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>